<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Switch
        android:id="@+id/common_scaling_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_common_scaling"
        android:textAppearance="?android:textAppearanceSmall"/>

    <de.lennartmeinhardt.android.moiree.util.IntValueSetup
        android:id="@+id/common_scaling_value_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:allowStepOutOfBounds="true"
        app:name="@string/common_scaling"
        app:stepSize="1"/>

    <de.lennartmeinhardt.android.moiree.util.IntValueSetup
        android:id="@+id/scaling_x_value_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:allowStepOutOfBounds="true"
        app:name="@string/horizontal"
        app:stepSize="1"/>

    <de.lennartmeinhardt.android.moiree.util.IntValueSetup
        android:id="@+id/scaling_y_value_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:allowStepOutOfBounds="true"
        app:name="@string/vertical"
        app:stepSize="1"/>

    <include
        layout="@layout/reset_two_dimensional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
