<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/RootMenuCard.SingleColumn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/MainMenuHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/app_name"/>

            <ImageButton
                android:id="@+id/main_menu_export"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:adjustViewBounds="true"
                android:contentDescription="@string/share_image"
                android:src="@drawable/ic_share"/>

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/main_menu_moiree_image_card"
            style="@style/MainMenuButtonCard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/main_menu_moiree_image_background1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:rotation="-3"
                android:scaleType="center"
                android:tint="@color/image_setup_card_preview_color"/>

            <ImageView
                android:id="@+id/main_menu_image_background2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:rotation="3"
                android:scaleType="center"
                android:tint="@color/image_setup_card_preview_color"/>

            <TextView
                style="@style/MainMenuButtonCardText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_image"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/main_menu_colors_card"
            style="@style/MainMenuButtonCard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".3"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/rainbow"/>

            <TextView
                style="@style/MainMenuButtonCardText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_colors"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/main_menu_transformation_card"
            style="@style/MainMenuButtonCard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:rotation="-5"
            android:scaleX=".75"
            android:scaleY=".95">

            <TextView
                style="@style/MainMenuButtonCardText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_transformation"/>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/main_menu_settings"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/menu_settings"
                android:src="@drawable/ic_settings"/>

            <ImageButton
                android:id="@+id/main_menu_help"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/menu_help"
                android:src="@drawable/ic_help"/>

            <ImageButton
                android:id="@+id/main_menu_about"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/menu_about"
                android:src="@drawable/ic_info"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>